[metadata]
name = sisypy-MercyFrey
version = 0.0.1
author = Melih Aktaş
author_email = imelih247@gmail.com
description = Running multiple tests with Carla Simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MercerFrey/sisypy

license_files = LICENSE

project_urls =
    #documentation etc 
    Bug Tracker = https://github.com/MercerFrey/sisypy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = sisypy
python_requires = >=3.8
install_requires =
    # TODO carla creates a problem here !
    #carla >=0.9.13;
    importlib-metadata; python_version < "3.8"


[options.entry_points]
console_scripts =
    sisypy = sisypy.command_line:main
